--- a/references.bib
+++ b/references.bib
@@ -226,7 +226,7 @@
 @book{Allis2003,
   title = {Waves in {{Anisotropic Plasmas}}},
   author = {Allis, William Phelps and Buchsbaum, Solomon J and Bers, Abraham},
-  year = {2003},
+  year = {1963},
   publisher = {{M.I.T. Press}},
   keywords = {\#nosource}
 }
@@ -4033,6 +4033,20 @@
   number = {3}
 }
 
+@article{chappell2014,
+  title = {Geometric {{Algebra}} for {{Electrical}} and {{Electronic Engineers}}},
+  author = {Chappell, James M. and Drake, Samuel P. and Seidel, Cameron L. and Gunn, Lachlan J. and Iqbal, Azhar and Allison, Andrew and Abbott, Derek},
+  year = {2014},
+  month = sep,
+  volume = {102},
+  pages = {1340--1363},
+  issn = {0018-9219, 1558-2256},
+  doi = {10/f6nn2x},
+  file = {C\:\\Users\\JH218595\\Zotero\\storage\\68KSW66P\\Chappell et al_2014_Geometric Algebra for Electrical and Electronic Engineers.pdf},
+  journal = {Proceedings of the IEEE},
+  number = {9}
+}
+
 @techreport{Chatelier,
   title = {{{TORE SUPRA}} : {{TOWARDS STEADY STATE IN A SUPERCONDUCTING TOKAMAK}}},
   author = {Chatelier, M.},
@@ -5287,6 +5301,14 @@
   number = {2}
 }
 
+@misc{denker2003,
+  title = {Maxwell-Ga.Pdf},
+  author = {Denker, John},
+  year = {2003},
+  file = {C\:\\Users\\JH218595\\Zotero\\storage\\MYEI88Q3\\maxwell-ga.pdf},
+  howpublished = {https://www.av8n.com/physics/maxwell-ga.pdf}
+}
+
 @article{denton2019,
   ids = {denton2019-1},
   title = {Eigenvectors from {{Eigenvalues}}},
@@ -6291,7 +6313,7 @@
   pages = {83--109},
   issn = {0164-0313, 1572-9591},
   doi = {10/d58fb4},
-  file = {C\:\\Users\\JH218595\\Documents\\Bibliography\\Papers\\Fusion\\RF\\LHCD\\Ehst et al._1982_Lower hybrid heating and current drive system for a tokamak reactor.pdf;C\:\\Users\\JH218595\\Zotero\\storage\\YMLPG3NU\\Ehst et al. - 1982 - Lower hybrid heating and current drive system for .pdf},
+  file = {C\:\\Users\\JH218595\\Documents\\Bibliography\\Papers\\Fusion\\RF\\LHCD\\Ehst et al._1982_Lower hybrid heating and current drive system for a tokamak reactor.pdf},
   journal = {Journal of Fusion Energy},
   language = {en},
   number = {1}
