--- a/tex/chap_RF_fundamentals.tex
+++ b/tex/chap_RF_fundamentals.tex
@@ -1,10 +1,11 @@
 % #####################################################
 % #####################################################
 % #####################################################
+\setchapterpreamble[u]{\margintoc}
 \chapter{RF Fundamentals}\label{chap:RF_fundamentals}
-\margintoc
 
-\epigraph{todo}{todo}
+
+\epigraph{It is not knowledge, but the act of learning, not possession but the act of getting there, which grants the greatest enjoyment.}{Carl Friedrich Gauss}
 
 This chapter is a reminder of the essential analytic elements of RF engineering used in this manuscript. Readers already aware of the transmission line and electromagnetic network theory can skip this chapter.
 
@@ -14,7 +15,7 @@ We will review the fundamentals of transmission line theory (Section~\ref{sec:tr
 % #####################################################
 % #####################################################
 \section{Uniform Transmission lines Properties}\label{sec:transmission_line}
-\marginnote[*-2]{Part of this section are taken from the documentation of the open-source Python package \href{http://scikit-rf.org/}{scikit-rf} which is developed by the author and used in RF circuit models, for example in \citeauthyear{hillairet2015-2} or in \citeauthyear{hillairet2019-1}.}
+\marginnote[*-2]{Part of this section are taken from the documentation of the open-source Python package \href{http://scikit-rf.org/}{scikit-rf} which is maintained by the author and used in RF circuit models, for example in \citeauthyear{hillairet2015-2} or in \citeauthyear{hillairet2019-1}.}
 
 Once RF waves have been generated, it must be transmitted to the antennas, using suitable transmission line depending on the RF frequency and power level. The main results and properties of uniform transmission lines are reviewed in this section. The results given here are well-known and can be found in numerous textbooks such as \sidecite{Harrington2001, marcuvitz1951, Thourel1988, Collin1990, gonzalez1997, pozar2012, Orfanidis, steer2019-3} to give a personal selection.
 
